Added mobile support

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <head>
     <link rel="stylesheet" type="text/css" href="Styles/style.css">
-	<html lang="en">
+    <link rel="stylesheet" type="text/css" href="Styles/MobileStyle.css">
+    <html lang="en">
 	<title>MyPage</title>
 	
 	<meta charset="UTF-8">
@@ -15,7 +16,7 @@
     </div>
     <div class="center">
     <div class="stuffInsideCenter">
-        <div class="middleFeaturesTitle">Features</div>
+        <div class="middleFeaturesTitle"><div class="featuresHeader">Features</div></div>
         <div class="middleBigTitle">Using design to improve product development</div>
         <div class="lightBlueBoxesInTheMiddle">
             <div class="lightBlueBox">
